loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:1: error: not found: value False
while (estSurBiscuit()==False) {
                        ^